--- a/booking-form.html
+++ b/booking-form.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="css/grid.css">
-<link rel="stylesheet" href="css/modal-form.css">
+<link rel="stylesheet" href="css/booking-form.css">
 <div class="modal-form" id="booking-form">
 
   <div class="close-btn">
