Slider transition fix

--- a/header.html
+++ b/header.html
@@ -7,50 +7,50 @@
 	<link rel="stylesheet" type="text/css" href="css/grid.css">
 </head>
 <body>
-<section id="header">
-    <section class="row image-wrapper">
-      <ul class="images-rotator">
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Tapa.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Crisp.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Chicken Cuisine/Breaded Chicken w Mayo Dip.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Chicken Cuisine/Chicken Cordon Blue.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Chicken Cuisine/Bavarian Chicken.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Ham.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Chicken Cuisine/Buffalo Chicken.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Steak Tagalog.jpg" style="display: inline;"></li>
+  <section id="header">
+    <section class="row header-image-wrapper">
+      <ul class="header-images-rotator">
+        <li class="header-food-tray"><img class="header-img-size header-rotator-img" src="img/media/web/Beef Cuisine/Beef Caldereta.jpg"></li>
+        <li class="header-food-tray"><img class="header-img-size header-rotator-img" src="img/media/web/Beef Cuisine/Beef Crisp.jpg"></li>
+        <li class="header-food-tray"><img class="header-img-size header-rotator-img" src="img/media/web/Beef Cuisine/Beef Ham.jpg"></li>
+        <li class="header-food-tray"><img class="header-img-size header-rotator-img" src="img/media/web/Chicken Cuisine/Chicken Alfredo.jpg"></li>
+        <li class="header-food-tray"><img class="header-img-size header-rotator-img" src="img/media/web/Beef Cuisine/Beef Steak Tagalog.jpg"></li>
+        <li class="header-food-tray"><img class="header-img-size header-rotator-img" src="img/media/web/Chicken Cuisine/Chicken Cordon Blue.jpg"></li>
+        <li class="header-food-tray"><img class="header-img-size header-rotator-img" src="img/media/web/Chicken Cuisine/Buffalo Chicken.jpg"></li>
+        <li class="header-food-tray"><img class="header-img-size header-rotator-img" src="img/media/web/Beef Cuisine/Corned Tenderloin Beef.jpg"></li>
       </ul>
     </section>
     
-    <section class="row navigator">
+    <section class="row header-navigator">
       <section class="row">
 
-      <section class="col-md-4 col-icon first-set-icon">
+      <section class="col-md-4 header-col-icon header-first-set-icon">
         <section class="row">
           <section class="col-md-6 ">
-            <img src="img/header/the-workforce-menu-item.png" class="list-icon">
+            <img src="img/header/the-workforce-menu-item.png" class="header-list-icon">
           </section>
           <section class="col-md-6 ">
-            <img src="img/header/menu-and-packages-menu-item.png" class="list-icon">
+            <img src="img/header/menu-and-packages-menu-item.png" class="header-list-icon">
           </section>
         </section>
       </section>
 
-      <section class="col-md-4 col-logo">
+      <section class="col-md-4 header-col-logo">
         <section class="row">
-         <section class="col-md-12 position-logo ">
-          <img src="img/header/s&amp;p-logo.png" alt="" class="comp-logo">
-          <a href="#"><span class="book-online">Book Online</span></a>
+         <section class="col-md-12 header-position-logo ">
+          <img src="img/header/s&p-logo.png" alt="" class="header-comp-logo">
+          <a href="#"><span class="header-book-online">Book Online</span></a>
          </section>
         </section>
       </section>
 
-       <section class="col-md-4 col-icon second-set-icon">
+       <section class="col-md-4 header-col-icon header-second-set-icon">
         <section class="row">
           <section class="col-md-6 ">
-            <img src="img/header/testimonials-menu-item.png" class="list-icon">
+            <img src="img/header/testimonials-menu-item.png" class="header-list-icon">
           </section>
           <section class="col-md-6 ">
-            <img src="img/header/customer-rewards-menu-item.png" class="list-icon">
+            <img src="img/header/customer-rewards-menu-item.png" class="header-list-icon">
           </section>
         </section>
         </section>
@@ -58,6 +58,7 @@
       </section>
     </section>
   </section>
+  
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
 <script src="lib/script.js"></script>
