Updated the image file path
Beautified

--- a/confirmation.html
+++ b/confirmation.html
@@ -14,7 +14,7 @@
     <section class="modal-title">Thank you for choosing Spoon and Pepper Foods Corporation! </section>
   
     <section class="message">You will receive a confirmation TEXT and EMAIL for your Catering Service booking details. Our Sales Head will call you within 24 Hours for Finalization and Payments. We are ready to serve you!</section>
-    <section class="booking"><a href="#">Book Again -&gt;</a></section>
+    <section class="booking"><a href="#">Book Again &rarr;</a></section>
     </section>
 </section>
 
