--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <section id="header">
     <section class="row image-wrapper">
       <ul class="images-rotator">
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Tapa.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Crisp.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Chicken Cuisine/Breaded Chicken w Mayo Dip.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Chicken Cuisine/Chicken Cordon Blue.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Chicken Cuisine/Bavarian Chicken.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Ham.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Chicken Cuisine/Buffalo Chicken.jpg" style="display: inline;"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Steak Tagalog.jpg" style="display: inline;"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Tapa.jpg" style="display: inline;"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Crisp.jpg" style="display: inline;"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Chicken Cuisine/Breaded Chicken w Mayo Dip.jpg" style="display: inline;"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Chicken Cuisine/Chicken Cordon Blue.jpg" style="display: inline;"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Chicken Cuisine/Bavarian Chicken.jpg" style="display: inline;"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Ham.jpg" style="display: inline;"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Chicken Cuisine/Buffalo Chicken.jpg" style="display: inline;"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Steak Tagalog.jpg" style="display: inline;"></li>
       </ul>
     </section>
     
