--- a/workforce.html
+++ b/workforce.html
@@ -10,14 +10,14 @@
   <section id="header">
     <section class="row image-wrapper">
       <ul class="images-rotator">
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Caldereta.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Crisp.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Ham.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Chicken Cuisine/Chicken Alfredo.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Beef Steak Tagalog.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Chicken Cuisine/Chicken Cordon Blue.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Chicken Cuisine/Buffalo Chicken.jpg"></li>
-        <li class="food-tray"><img class="img-size rotator-img" src="img/media/web/Beef Cuisine/Corned Tenderloin Beef.jpg"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Caldereta.jpg"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Crisp.jpg"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Ham.jpg"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Chicken Cuisine/Chicken Alfredo.jpg"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Beef Steak Tagalog.jpg"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Chicken Cuisine/Chicken Cordon Blue.jpg"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Chicken Cuisine/Buffalo Chicken.jpg"></li>
+        <li class="food-tray"><img class="img-size rotator-img" src="img/media/Beef Cuisine/Corned Tenderloin Beef.jpg"></li>
       </ul>
     </section>
     
