"Added data to actual data to send to email"

--- a/booking-form.html
+++ b/booking-form.html
@@ -45,6 +45,16 @@
         <div class="input-group">
           <div class="col-md-4">
             <div class="label">
+              <label>Email</label>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <input type="text" name="emailPerson" class="form-input" placeholder="Complete Name" ng-model='formFields.email' required>
+          </div>
+        </div>
+        <div class="input-group">
+          <div class="col-md-4">
+            <div class="label">
               <label>Mobile No.</label>
             </div>
           </div>
