Added send email functionality

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
   <script type="text/javascript" src='js/service/booking-package-service.js'></script>
 
+  <script type="text/javascript" src="lib/pdf.js"></script>
+  <script type="text/javascript" src='js/email.js'></script>
+
   <script type="text/javascript" src='js/controller/book-online-controller.js'></script>
   <script type="text/javascript" src='js/controller/step-one-booking-form-controller.js'></script>
   <script type="text/javascript" src='js/controller/booking-form-controller.js'></script>
