"changed order another data structure"

--- a/booking-form.html
+++ b/booking-form.html
@@ -195,7 +195,7 @@
     </button>
   </div>
   <div class="col-md-12">
-    <button class="btn btn-primary" ng-click="setTab(4)" ng-disable="bookingFormThree.$invalid">
+    <button class="btn btn-primary" ng-click="setTab(4)" ng-disabled="bookingFormThree.$invalid">
     <span class="calm">Continue to</span> Review
     </button>
   </div>
