--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 
   <script type="text/javascript" src='js/service/booking-package-service.js'></script>
+  <script type="text/javascript" src='js/service/chosen-package-service.js'></script>
   
   <script type="text/javascript" src="lib/pdf.js"></script>
   <script type="text/javascript" src='js/email.js'></script>
