--- a/step-2-booking-form.html
+++ b/step-2-booking-form.html
@@ -18,7 +18,7 @@
             <img src="http://placehold.it/150x150">
             <h3 class="price-per-pax">{{package.title}}</h3>
             
-            <input type="radio" name="package.title" class="form-input input-radio" ng-click="setTabPackage( package.items,package.menu, package.id, package.title, package.price )">
+            <input type="radio" name="package.title" class="form-input input-radio" ng-click="setTabPackage( package.items,package.menu,  package.price )">
             <a href="" class="view-inclusions" ng-click="tabStepTwoInclusionsShow( package.id )">View inclusions details</a></div>
           </li>          
       </ul>
